# rust-projects

./: .gitignore  libs.txt  rust_windows_gnu_install_and_fix.txt  surreal_db_scripts.txt
DndCoinTool/src/: CoinBag.rs
RustTUITest/: Cargo.toml  run.bat
RustTUITest/src/: main.rs
RustTUITest/src/utils/: mod.rs
aoc/: Cargo.toml
crossterm_example_getch_alternative/: Cargo.toml
crossterm_example_getch_alternative/src/: main.rs
dndgui_egui/: Cargo.toml
dndgui_egui/dndgui/: Cargo.toml
dndgui_egui/dndlib/: Cargo.toml
dndgui_egui/launcher/: Cargo.toml
dndgui_egui/mainapp/: Cargo.toml
epub_text_search/src/: main.rs
errorstack_example/: Cargo.toml
errorstack_example/src/: main.rs
from_into_trait_conversions/: Cargo.toml
from_into_trait_conversions/src/: main.rs
hello_world/src/: console.rs  enums.rs  lambda.rs  macros.rs  main.rs  objects.rs  point.rs  scripts.rs  traits.rs  utils.rs
item_store_example/: Cargo.toml
item_store_example/src/: item.rs  main.rs  store.rs
macro_examples/: Cargo.toml
macro_examples/src/: declare_macros.rs  main.rs
macroquad_examples/: Cargo.toml
macroquad_examples/basic-shapes/: Cargo.toml
metadata_derive_attribute_proc_macro_example/: Cargo.toml
metadata_derive_attribute_proc_macro_example/main/: Cargo.toml
metadata_derive_attribute_proc_macro_example/metadata_derive/: Cargo.toml
pattern_matching_examples/: Cargo.toml
pattern_matching_examples/src/: main.rs
randomstuff/: Cargo.toml
reflective_derive_proc_macro_example/: Cargo.toml
reflective_proc_macro_example/: Cargo.toml
rust_magic_generic_parameters/: Cargo.toml  README.md
sql_database_example/: .env  Cargo.toml
sql_database_example/migrations/2023-05-25-213353_create_users/: up.sql
sql_database_example/src/: lib.rs  main.rs  models.rs  schema.rs
sql_database_example/src/actions/: create_user.rs  mod.rs
sqlx_mysql_example/: Cargo.toml
sqlx_sqlite_example/: Cargo.toml
sqlx_sqlite_example/src/: init.rs
surreal_db_example/: Cargo.toml
(+70 files in other folders)
