[package]
name = "sql_database_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.0", features = ["sqlite", "libsqlite3-sys"] }
dotenvy = "0.15.7"
#libsqlite3-sys = "0.26.0"
libsqlite3-sys = { version = "0.26.0" }
