[package]
name = "sqlx_sqlite_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
libsqlite3-sys = { version = "0.24.2" }
sqlx = { version = "0.6.3", features = ["runtime-async-std-native-tls", "sqlite"] }

#[profile.dev.build-override]
#opt-level=3
#codegen-units=1


#[dependencies.openssl]
#version = "0.10.29"
#features = [
#    "vendored"
#]
