[package]
name = "sqlx_sqlite_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.29.0"
libsqlite3-sys = { version = "0.26.0" }
paste = "1.0.12"
#sqlx = { version = "0.7.0-alpha.3", features = ["runtime-async-std-native-tls", "sqlite"] }
#async-std = { version = "1.12.0", features = ["attributes"] }

#[profile.dev.build-override]
#opt-level=3
#codegen-units=1


#[dependencies.openssl]
#version = "0.10.29"
#features = [
#    "vendored"
#]
